Add responsive exercise using media queries

--- a/semantic-html/index.html
+++ b/semantic-html/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Semantic HTML</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -67,9 +68,9 @@
             <h1><span>About Me</span></h1>
             <img class="author_img" src="http://bit.ly/2IlGGZU" alt="" class="author_img">
             <div class="author_desc">
-                Hi.<br> 
+                Hi.<br>
                 I'm Carla W.<br>
-                I'm a web designer / developer based in Toronto, Canada.<br> 
+                I'm a web designer / developer based in Toronto, Canada.<br>
                 I have a passion for web design and love to create for web and mobile devices.<br>
             </div>
             <div class="author_contact">
