--- a/flexbox-css/index.html
+++ b/flexbox-css/index.html
@@ -1,33 +1,45 @@
-<div class="panels">
-  <div class="panel">
-    <div class="text">
-      <p>Hey</p>
-      <p>Let's</p>
-      <p>Dance</p>
-    </div>
-    
-    <div class="text">
-      <p>give</p>
-      <p>you</p>
-      <p>the world</p>
-    </div>
-  
-    <div class="text">
-      <p>experience</p>
-      <p>it</p>
-      <p>today</p>
-    </div>
-  
-    <div class="text">
-      <p>give</p>
-      <p>me</p>
-      <p>all</p>
-    </div>
-  
-    <div class="text">
-      <p>life</p>
-      <p>in</p>
-      <p>motion</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="style.css">
+  <title>Flexbox CSS</title>
+</head>
+<body>
+  <div class="panels">
+    <div class="panel">
+      <div class="text">
+        <p>Hey</p>
+        <p>Let's</p>
+        <p>Dance</p>
+      </div>
+
+      <div class="text">
+        <p>give</p>
+        <p>you</p>
+        <p>the world</p>
+      </div>
+
+      <div class="text">
+        <p>experience</p>
+        <p>it</p>
+        <p>today</p>
+      </div>
+
+      <div class="text">
+        <p>give</p>
+        <p>me</p>
+        <p>all</p>
+      </div>
+
+      <div class="text">
+        <p>life</p>
+        <p>in</p>
+        <p>motion</p>
+      </div>
     </div>
   </div>
-</div>
+</body>
+</html>
