--- a/semantic-html/index.html
+++ b/semantic-html/index.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Semantic HTML</title>
+  <title>Blog template - Semantic HTML</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="responsive.css">
 </head>
 <body>
     <header>
@@ -18,6 +19,13 @@
                     <li class="nav_item"><a href="#">Pricing</a></li>
                     <li class="nav_item"><a href="#">Contact Us</a></li>
                 </ul>
+                <div class="nav_responsive">
+                  <span>
+                    <i></i>
+                    <i></i>
+                    <i></i>
+                  </span>
+                </div>
                 <div class="search">
                     <svg version="1.1"
                          xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
