--- a/fiesta/index.html
+++ b/fiesta/index.html
@@ -9,7 +9,16 @@
 
 </head>
 <body>
-  <div class="estamosMelos" id="estamosMelos">Holi</div>
+  <audio src="./sounds/fizzle.wav"></audio>
+  <audio src="./sounds/hat.wav"></audio>
+  <audio src="./sounds/kick.wav"></audio>
+  <audio src="./sounds/snare.wav"></audio>
+  <audio src="./sounds/snarezz.wav"></audio>
+  <audio src="./sounds/synth.wav"></audio>
+  <audio src="./sounds/vox1.wav"></audio>
+  <audio src="./sounds/vox2.wav"></audio>
+  <audio src="./sounds/vox3.wav"></audio>
+  <audio src="./sounds/wood.wav"></audio>
   <script type="text/javascript">
       console.log("hello!");
       var name = "maria";
