--- a/javascript/index.html
+++ b/javascript/index.html
@@ -10,14 +10,13 @@
 </head>
 <body>
 
-  <section>
-    <article class="">
-      <figure>
-        <img src="" alt="">
-        <figcaption class="figcaption"> Nombre del autor </figcaption>
-      </figure>
-    </article>
+  <section id="wrap">
+
   </section>
+<section class="section-two">
+    <article class="article-two">
+      </article>
+</section>
 
 </body>
 </html>
