--- a/panels/index.html
+++ b/panels/index.html
@@ -10,31 +10,31 @@
 <body>
   <div class="panels">
     <div class="panel">
-      <div class="text">
+      <div class="panel__item">
         <p>Hey</p>
         <p>Let's</p>
         <p>Dance</p>
       </div>
 
-      <div class="text">
+      <div class="panel__item">
         <p>give</p>
         <p>you</p>
         <p>the world</p>
       </div>
 
-      <div class="text">
+      <div class="panel__item">
         <p>experience</p>
         <p>it</p>
         <p>today</p>
       </div>
 
-      <div class="text">
+      <div class="panel__item">
         <p>give</p>
         <p>me</p>
         <p>all</p>
       </div>
 
-      <div class="text">
+      <div class="panel__item">
         <p>life</p>
         <p>in</p>
         <p>motion</p>
