--- a/windows-start-menu/index.html
+++ b/windows-start-menu/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="main.css">
-  <title>Document</title>
+  <link rel="stylesheet" href="responsive.css">
+  <title>Windows 10 Star Menu</title>
 </head>
 <body>
   <header>
