Update contact list

--- a/contact-list-js/index.html
+++ b/contact-list-js/index.html
@@ -14,7 +14,7 @@
 
     <header class="header">
         <h1 class="title contacts_fav">Favorites</h1>
-        <p class="cta">Add your favorites contacts on the list by clicking the card</p>  
+        <p class="cta">Add your favorites contacts by clicking the card</p>  
         <section class="favorites">
         </section>
     </header>
