--- a/windows-start-menu/index.html
+++ b/windows-start-menu/index.html
@@ -9,39 +9,41 @@
   <title>Windows 10 Star Menu</title>
 </head>
 <body>
-  <header>
-    <h1>Start</h1>
-    <div class="user">
-      <div class="user-info">
-        <h2>Lupita Pérez</h2>
-        <span class="location">Medellín</span>
-      </div>
-      <div class="avatar">
-        <img src="https://image.flaticon.com/icons/svg/146/146025.svg" alt="">
-      </div>
+  <div class="wrapper">
+    <div class="main">
+      <header>
+        <h1>Start</h1>
+        <div class="user">
+          <div class="user-info">
+            <h2>Lupita Pérez</h2>
+            <span class="location">Medellín</span>
+          </div>
+          <div class="avatar">
+            <img src="https://image.flaticon.com/icons/svg/146/146025.svg" alt="">
+          </div>
+        </div>
+      </header>
+      <section>
+          <div class="box box_left">
+            <div class="box_item box_lg blue"></div>
+            <div class="box_item box_small green"></div>
+            <div class="box_item box_small yellow"></div>
+          </div>
+          <div class="box box_middle">
+            <div class="box_item box_lg orange"></div>
+            <div class="box_item box_small red"></div>
+            <div class="box_item box_small red"></div>
+            <div class="box_item box_lg kitten"></div>
+          </div>
+          <div class="box box_right">
+            <div class="box_item box_small blue"></div>
+            <div class="box_item box_small green"></div>
+            <div class="box_item box_small yellow"></div>
+            <div class="box_item box_small red"></div>
+          </div>
+      </section>
     </div>
-  </header>
-  <section>
-    <div class="wrapper">
-      <div class="box box_left">
-        <div class="box_item box_lg blue"></div>
-        <div class="box_item box_small green"></div>
-        <div class="box_item box_small yellow"></div>
-      </div>
-      <div class="box box_middle">
-        <div class="box_item box_lg orange"></div>
-        <div class="box_item box_small red"></div>
-        <div class="box_item box_small red"></div>
-        <div class="box_item box_lg kitten"></div>
-      </div>
-      <div class="box box_right">
-        <div class="box_item box_small blue"></div>
-        <div class="box_item box_small green"></div>
-        <div class="box_item box_small yellow"></div>
-        <div class="box_item box_small red"></div>
-      </div>
-    </div>
-  </section>
+  </div>
 </body>
 </html>
 
